--- a/jinja2/react_base.html
+++ b/jinja2/react_base.html
@@ -132,10 +132,18 @@
     </div>
   </footer>
 
+  {% block auth_modal %}
+    {% include "includes/auth-modal.html" %}
+  {% endblock %}
+
   <!-- site js -->
   {% block site_js %}
     {{ providers_media_js() }}
     {% javascript 'react-main' %}
+    {% javascript 'auth-modal' %}
+    <script>
+      if (window.mdn && mdn.analytics) mdn.analytics.trackOutboundLinks();
+    </script>
     {% for script in scripts %}
       {% javascript script %}
     {% endfor %}
