--- a/kuma/users/jinja2/socialaccount/signup-landing.html
+++ b/kuma/users/jinja2/socialaccount/signup-landing.html
@@ -22,15 +22,7 @@
         <header>
             <h2>{{ _('Sign In') }}</h2>
         </header>
-        <p>{{ _('Sign in to enjoy the benefits of an MDN account. If you haven’t already created an MDN profile, you will be prompted to do so after signing in.') }}</p>
-        <div class="auth-button-container">
-            <a href="{{ provider_login_url('github') }}" class="github-auth">
-                {{ _('Sign in with Github') }}
-            </a>
-            <a href="{{ provider_login_url('github') }}" class="google-auth">
-                {{ _('Sign in with Google') }}
-            </a>
-        </div>
+        {% include "includes/auth-modal-content.html" %}
     </section>
     <section class="benefits">
         <header>
